Frontend: feat - add some styling

--- a/frontend/src/Components/HeroBanner.css
+++ b/frontend/src/Components/HeroBanner.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 400px;
+    height: 90vh;
     background-size: cover;
     background-position: center;
     color: white;
