--- a/frontend/src/Components/CityDescription.css
+++ b/frontend/src/Components/CityDescription.css
@@ -1,10 +1,13 @@
 .city-description {
   background-color: #ffc9b9;
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
-  padding: 20px;
-  border-radius: 8px;
+  padding: 100px 80px 100px 80px;
+  border-radius: 20px;
+  margin: 20px;
+  gap: 20px;
 }
 
 .city-image {
@@ -20,36 +23,28 @@
   max-width: 600px;
 }
 
-.city-title {
-  display: flex;
-  align-items: center;
-  font-size: 2em;
-  margin-bottom: 10px;
-}
-
 .city-title h1 {
   margin: 0;
-  margin-right: 10px;
 }
 
-.country-flag {
-  width: 50px;
-  height: auto;
+.city-info-container {
+  text-align: left;
 }
 
-.city-description-text {
-  font-size: 1.2em;
-  line-height: 1.6;
+.city-info-container h1 {
+  font-size: 4rem;
+  margin: 0;
+  text-align: left;
 }
 
-.back-link {
-  display: inline-block;
-  margin-bottom: 20px;
-  text-decoration: none;
-  color: #007bff;
-  font-weight: bold;
-}
-
-.back-link:hover {
+.city-info-container a {
   text-decoration: underline;
+  display: flex;
+  flex-direction: column;
+}
+
+
+.city-description p {
+  line-height: 2;
+  margin-bottom: 10px;
 }
