--- a/frontend/src/Routes/Destination.css
+++ b/frontend/src/Routes/Destination.css
@@ -22,6 +22,9 @@ h1 {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   transition: all 0.5s linear;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .destination-card:hover {
@@ -35,6 +38,7 @@ h1 {
   height: 100%;
   scale: 1.2;
   transition: all 0.5s linear;
+  
 }
 
 .destination-card:hover .destination-image {
