--- a/frontend/src/Components/HeroBanner.css
+++ b/frontend/src/Components/HeroBanner.css
@@ -2,15 +2,25 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 90vh;
+    height: 100vh;
     background-size: cover;
     background-position: center;
     color: white;
     text-align: center;
 }
 
-.hero-content {
-    padding: 20px;
-    border-radius: 10px;
+
+
+.hero-banner__text {
+    z-index: 1;
 }
 
+.hero-banner__text h1 {
+    font-size: 5em;
+    margin: 0;
+}
+
+.hero-banner__text p {
+    font-size: 2.5em;
+    margin: 0.5em 0 0 0;
+}
