--- a/frontend/src/Components/HeroBanner.css
+++ b/frontend/src/Components/HeroBanner.css
@@ -1,23 +1,42 @@
 .hero-banner {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    background-size: cover;
-    background-position: center;
+    height: 92vh;
     color: white;
     text-align: center;
+    overflow: hidden;
 }
 
-
+.hero-banner::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: url('../assets/herobaner1.jpeg');
+    background-size: cover;
+    background-position: center;
+    filter: blur(5px);
+    z-index: 0;
+}
 
 .hero-banner__text {
+    position: relative;
     z-index: 1;
 }
 
 .hero-banner__text h1 {
-    font-size: 5em;
+    font-size: 7em;
     margin: 0;
+    color: #4C956C;
+}
+
+.hero-banner__text span {
+    font-family: inherit;
+    color: #FFC9B9;
 }
 
 .hero-banner__text p {
