Frontend: Feat - hero banner mobile fix

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -90,13 +90,16 @@ form {
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (max-width: 768px) {
+
+/* destination cards grid */
   .popular-destinations {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 40px;
   }
 
-  .city-description {
+/* city description */
+.city-description {
   flex-direction: column;
   padding: 40px;
   gap: 10px;
@@ -123,6 +126,7 @@ form {
   margin-bottom: 10px;
 }
 
+/* itinerary */
 .itinerary-planner {
   display: flex;
   flex-direction: column;
@@ -139,6 +143,33 @@ form {
 .itinerary-attraction {
   display: flex;
   flex-direction: column;
+}
+
+/* hero banner */
+.hero-banner {
+    height: 50vh;
+}
+
+.hero-banner__text h1 {
+    font-size: 5em;
+}
+
+.hero-banner__text p {
+    font-size: 2em;
+}
+
+/* search bar */
+form {
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+    padding: 0 40px 0 40px;
+}
+
+form input,
+form button {
+    margin: 0;
+    width: 100%;
 }
 }
 
@@ -180,9 +211,9 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-size: large;
+  font-size: x-large;
   gap: 0px;
-  padding: 30px;
+  padding: 30px 50px 30px 50px;
 }
 
 .weather-content img {
@@ -232,5 +263,23 @@ form {
 .itinerary-attraction {
   display: flex;
   flex-direction: row;
+}
+
+/* hero banner */
+.hero-banner__text h1 {
+    font-size: 16vw;
+}
+
+.hero-banner__text p {
+    hyphens: auto;
+    font-size: 1.5rem;
+}
+
+/* search bar */
+form {
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+    padding: 0;
 }
 }
