--- a/frontend/src/Components/Navbar.css
+++ b/frontend/src/Components/Navbar.css
@@ -3,8 +3,13 @@
   padding: 1rem;
   position: sticky;
   top: 0;
-  z-index: 1000;
+  z-index: 1001;
   transition: all 0.3s ease;
+}
+
+.logo img {
+  width: 40px;
+  height: 30px;
 }
 
 .navbar.scrolled {
@@ -28,6 +33,8 @@
   text-decoration: none;
   font-size: 1.5rem;
   margin-left: 5rem;
+  display: flex;
+  gap: 5px;
 }
 
 .nav-menu {
