Frontend: Refactor - move destination cards grid to a seperated component

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -149,6 +149,10 @@ form {
   flex-direction: column;
 }
 
+.itinerary-map {
+    padding-left: 0;
+}
+
 /* hero banner */
 .hero-banner {
     height: 50vh;
