--- a/frontend/src/Components/home/HeroBanner.css
+++ b/frontend/src/Components/home/HeroBanner.css
@@ -16,7 +16,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: url('../assets/herobaner1.jpeg');
+    background-image: url('../../assets/herobaner1.jpeg');
     background-size: cover;
     background-position: center;
     filter: blur(5px);
