--- a/frontend/src/Components/BackToTopButton.css
+++ b/frontend/src/Components/BackToTopButton.css
@@ -1,19 +1,18 @@
 .back-to-top-button {
   position: fixed;
-  bottom: 20px;
   right: 20px;
+  bottom: 80px;
   background-color: #ffc9b9;
+  color: #4c956c;
   border: none;
-  border-radius: 50%;
   width: 50px;
   height: 50px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  font-size: 24px;
+  font-size: 40px;
   cursor: pointer;
   transition: opacity 0.3s ease;
-  opacity: 0.7;
-}
-
-.back-to-top-button:hover {
-  opacity: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
 }
