--- a/frontend/src/Components/destination/WeatherInfo.css
+++ b/frontend/src/Components/destination/WeatherInfo.css
@@ -6,12 +6,13 @@
 
 .weather-content {
   background-color: #FFC9B9;
-  border-radius: 20px;
+  border-radius: 10px;
   display: flex;
-  padding: 20px;
+  padding: 40px;
   font-size: larger;
   gap: 20px;
   text-align: start;
+  box-shadow: 0 0 10px #c6c6c6;
 }
 
 .weather-content img {
