--- a/frontend/src/Components/utility/BackToTopButton.css
+++ b/frontend/src/Components/utility/BackToTopButton.css
@@ -15,4 +15,14 @@
   justify-content: center;
   padding: 0;
   margin: 0;
+  z-index: 1000;
+}
+
+.button-container {
+  opacity: 50%;
+  transition: all 0.3s ease-in-out;
+}
+
+.button-container:hover {
+  opacity: 100%;
 }
