--- a/frontend/src/Components/utility/StickyButtons.css
+++ b/frontend/src/Components/utility/StickyButtons.css
@@ -18,6 +18,26 @@
   z-index: 1000;
 }
 
+.share-button {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  background-color: #4c956c;
+  color: #ffc9b9;
+  border: none;
+  width: 50px;
+  height: 50px;
+  font-size: 40px;
+  cursor: pointer;
+  transition: opacity 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+  z-index: 1000;
+}
+
 .button-container {
   opacity: 50%;
   transition: all 0.3s ease-in-out;
