--- a/frontend/src/Components/utility/StickyButtons.css
+++ b/frontend/src/Components/utility/StickyButtons.css
@@ -38,6 +38,26 @@
   z-index: 1000;
 }
 
+.share-button-popup {
+  position: fixed;
+  right: 80px;
+  bottom: 20px;
+  background-color: gray;
+  color: #ffc9b9;
+  border: none;
+  width: 100px;
+  height: 50px;
+  font-size: 18px;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+  z-index: 1000;
+}
+
 .button-container {
   opacity: 50%;
   transition: all 0.3s ease-in-out;
