--- a/frontend/src/Components/destination/CountryInfo.css
+++ b/frontend/src/Components/destination/CountryInfo.css
@@ -17,7 +17,6 @@
   grid-template-columns: auto auto;
   grid-template-rows: repeat(4, auto);
   justify-content: center;
-  align-items: start;
   gap: 30px;
   column-gap: 100px;
   grid-auto-flow: column;
@@ -27,6 +26,8 @@
 .country-info-grid li {
   text-align: left;
   padding: 0px;
+  display: flex;
+  align-items: center;
 }
 
 .country-info-grid li span {
